配置项修改

--- a/src/ezUI/ezLay/appsettings.Development.json
+++ b/src/ezUI/ezLay/appsettings.Development.json
@@ -9,7 +9,7 @@
     "NoAccessUrl": "/Page/NoAuth", //不能访问
     "DownloadUrl": "wwwroot/uploads", //文件上传目录
     "NoLicUrl": "/Page/NoLic", //无Lic
-    "SuperRole": "9", //全权限的超级管理员角色,
+    "SuperRole": "88888888", //全权限的超级管理员角色,
     "WebPort": 5001
   },
   "Paths": {
@@ -18,16 +18,16 @@
     "DefaultAvatar": "files/avatar/default/"
   },
   "Cookies": {
-    "SchemeName": "ItmsCookies",
+    "SchemeName": "ezCookies",
     "Antiforgery": {
-      "Name": ".Itms-Token",
+      "Name": ".ez-Token",
       "FormName": "_Token_"
     },
     "Auth": {
-      "Name": ".Itms-Auth"
+      "Name": ".ez-Auth"
     },
     "Session": {
-      "Name": ".Itms-Session"
+      "Name": ".ez-Session"
     }
   },
   "ConnectionStrings": {
